--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
 
   <div class="wrapper">
     <div class="card">
-      <span id="advice-id">Advice #117</span>
-      <p id="advice">"It is easy to sit up and take notice, what's difficult is getting up and taking action"</p>
+      <span id="advice-id">Loading....</span>
+      <p id="advice">Loading....</p>
       <img src="./images/pattern-divider-desktop.svg" alt="pattern" id="pattern">
       <div class="dice">
         <img  src="./images/icon-dice.svg" alt="dice icon" id="dice">
       </div>
     </div>
+
+    <!-- <p class="p-text">Click the Die to get new advice</p> -->
   </div>
+
+  <footer>
+    Developed by onlyeugene
+  </footer>
 
 
   <script src="./script.js"></script>
